[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Elements/DeleteButton.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/icons/trash_icon.svg" type="Texture" id=2]

[node name="DeleteButton" type="TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -40.0
margin_right = 25.0
margin_bottom = 40.0
rect_min_size = Vector2( 50, 50 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
